# aiidalab-openbis

./: .gitignore  0_home.ipynb  1_sample_preparation.ipynb  2_sample_measurement.ipynb  3_import_export_simulations.ipynb  4_openbis_chatbot.ipynb  5_setup_chatbot.ipynb  __init__.py.ipynb  active_watchdogs.json  create_analysis.ipynb  create_drafts.ipynb  create_results.ipynb  openbis_chatbot.ipynb  setup.cfg  setup.json  setup_chatbot.ipynb  start.py  test_tools.ipynb
ai_agent/: single_agent.py  tools.py
ai_agent/data/: system_prompt.txt
config/: config.json
deprecated/: upload_substances.ipynb
metadata/: actions_codes.json  actions_types.json  collection_paths.json  object_codes.json  object_types.json  simulation_types.json  workchain_viewers.json
nanonis_importer/: nanonis_importer.py
nanonis_importer/spmpy/: machine_config.yaml
schema/: openbis_objects.py
src/: aiida_utils.py  create_samples_widget.py  custom_widgets.py  measurements_uploader.py  sample_preparation_widgets.py  setup_openbis.py  simulations_widgets.py  upload_logs_to_afs.py  utils.py  watchdog_widgets.py  widgets.py
tests/: afs_upload_python.py  test_pybis.ipynb
