[metadata]
name = aiidalab-openbis
version = 0.1.0
description = Tool to connect AiiDAlab with openBIS
long_description = file: README.md
long_description_content_type = text/markdown
author = Fabio Lopes, Carlo Pignedoli, Aliaksandr Yakutovich
author_email = fabio.lopes@empa.ch
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
project_urls =
    Bug Tracker =
    Documentation =
    Logo = https://github.com/nanotech-empa/aiidalab-openbis/blob/master/aiidalab_openbis_logo.jpg

[options]
python_requires = >=3.9
package = find:
install_requires =
    aiida-core~=2.5, <3
    ase==3.26.0
    scikit-learn==1.6.1
    pybis==6.7.0.0rc1
    rdkit==2025.9.1
    SPIEPy==0.2.1
    ipyfilechooser==0.6.0
    langchain==0.3.27
    langchain-core==0.3.76
    langgraph==0.6.7
    langchain-openai==0.3.33
    langchain-google-genai==2.1.12
    langchain-anthropic==0.3.21
    langchain-ollama==0.3.8
    langchain-text-splitters==0.3.11
    langchain-chroma==0.2.6

[aiidalab]
title = nanotech@openbis

[flake8]
ignore =
    E501
    W503
    E203

[bumpver]
current_version = "v0.1.0"
version_pattern = "v0Y.0M.PATCH[PYTAGNUM]"
commit_message = "Bump version {old_version} -> {new_version}"
commit = True
tag = True
push = True

[bumpver:file_patterns]
setup.cfg =
    current_version = "{version}"
    version = {pep440_version}
